--- a/src/styles.css
+++ b/src/styles.css
@@ -354,6 +354,13 @@ body {
 }
 
 /* Filters and Searching*/
+.filter-label {
+    color: white;
+    font-family: Poppins, sans-serif;
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
 .filter-category {
     cursor: pointer;
     padding: 10px;
@@ -368,14 +375,41 @@ body {
     background-color: #121217;
 }
 
+.filter-category.active {
+    background-color: #2425DB;
+    color: #aaa;
+}
+
 .search-bar {
     padding: 10px;
     border-radius: 30px;
     border: 1px solid #1C1D26;
     background-color: #1C1D26;
-    color: white;
+    color: #aaa;
     margin-bottom: 10px;
     width: 100%;
+    font-family: Kode Mono, monospace;
+}
+.field-min, .field-max {
+    grid-template-columns: auto;
+    padding: 10px;
+    border-radius: 8px;
+    border: 1px solid #1C1D26;
+    background-color: #1C1D26;
+    color: #aaa;
+    margin-bottom: 10px;
+    width: 100px;
+    font-family: Kode Mono, monospace;
+}
+
+.field-min:focus, .field-max:focus {
+    outline: none;
+    border: 1px solid #2425DB;
+}
+
+.field-min {
+    margin-right: 10px;
+
 }
 
 fieldset {
@@ -384,7 +418,7 @@ fieldset {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    color: white;
+    color: #aaa;
     font-family: Kode Mono, monospace;
     /* No border*/
     border: none;
