--- a/App.css
+++ b/App.css
@@ -1,53 +1,44 @@
 .App {
-  width: 420px;
-  height: 420px;
-  background: mediumblue;
-}
-.Title h1 {
   text-align: center;
-  font-size: 56px;
-  color: aqua;
 }
-.Login h1{text-align: center;
-  font-size: 36px;
-  margin-top: 40px;
-  color: black;
-}
-.Status {text-align: center;
-}
-.User input{
+.Title {
   text-align: center;
-  height: 40px;
-  margin-top: 20px;
-  margin-bottom: 10px;
-  width: 80%;
-  margin-left: 10%;
-  margin-right: 10%;
+  width: 100%;
+  color: #4d4de0;
+  height: 2000px;
+  background-color: #121217;
 }
-.Pass input{
-  height: 40px;
-  margin-top: 10px;
-  margin-bottom: 20px;
-  text-align: center;
-  width: 80%;
-  margin-left: 10%;
-  margin-right: 10%;
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
-.LB button{
-  height: 20px;
-  margin-top: 100px;
-  margin-bottom: 10px;
-  text-align: center;
-  width: 40%;
-  margin-left: 30%;
-  margin-right: 30%;
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
-.RB button{
-  height: 20px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  text-align: center;
-  width: 40%;
-  margin-left: 30%;
-  margin-right: 30%;
+
+.App-header {
+  background-color: #121217;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
