--- a/src/styles.css
+++ b/src/styles.css
@@ -211,7 +211,19 @@ body {
 
 .button:active {
     background-color: #1E1F8A; /* Darker shade of button color on click */
-}/* animate transition for the button */
+}
+
+.message {
+    color: white;
+    font-family: Poppins, sans-serif;
+    font-size: 14px;
+    text-align: center;
+    padding: 20px;
+    background-color: #1C1D26;
+    border-radius: 5px;
+    margin: 20px;
+
+}
 
 
 .item-container:hover {
