--- a/src/styles.css
+++ b/src/styles.css
@@ -496,6 +496,20 @@ body {
     margin-top: 20px;
 }
 
+.prev, .next {
+    padding: 5px 10px;
+    background-color: #2425DB;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 8px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    transition: background-color 0.3s ease;
+    font-family: Kode Mono, monospace;
+}
+
 
 
 fieldset {
